Fix card overlapping bug and remove zindex hack
There was an issue where the lower right rank and suit icons were visible when cards were overlapped. Turns out you need to explicitly set a background color, it's not actually white by default.

--- a/frontend/src/css/card.css
+++ b/frontend/src/css/card.css
@@ -10,6 +10,8 @@
   align-items: flex-start;
   margin-right: -77px;
   transition-duration: 0.15s;
+  background: #ffffff;
+  z-index: auto;
 }
 
 .lower {
